--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
         <section id="home" class=" flex-grow-1 position-relative  z-3 ">
             <div class="container my_container  ">
                 <div class=" text-center pt-5 ">
-                    <h1 class="fs-head fw-regular font_Cherry clr-1 cozy_shadow">Cozy<span
-                            class="clr-2 font_Soda  capyt_shadow">Capys</span><span class="clr-3 nft_shadow">NFT</span>
+                    <h1 class="fs-head fw-regular font_Cherry clr-1 cozy_shadow ">Cozy<span
+                            class="clr-2 font_Soda  capyt_shadow mt12">Capys</span><span
+                            class="clr-3 nft_shadow mt12">NFT</span>
                     </h1>
                     <p class="fw-bold  fs-1xsm clr-3 font_Balsamiq mt-4"> Cozy Capys is an impactful NFT project
                         featuring
