--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="d-flex align-items-center justify-content-between ">
                     <div class="d-flex align-items-center gap-2">
                         <img src="./assets/image/svg/nav-img.svg" alt="#">
-                        <a href="" class="clr-1 fs-cmn fw-regular font_Chewy cory-shadow   ">Cozy <span
+                        <a href="" class="clr-1 fs-cmn fw-regular font_Chewy cory-shadow   ">Cozy<span
                                 class="clr-2 capy-shadow">Capys</span></a>
                     </div>
                     <ul id="navbar"
@@ -137,7 +137,8 @@
                             class="clr-2 font_Soda  capyt_shadow mt12">Capys</span><span
                             class="clr-3 nft_shadow mt12">NFT</span>
                     </h1>
-                    <p class="fw-bold  fs-1xsm clr-3 font_Balsamiq mt-4"> Cozy Capys is an impactful NFT project
+                    <p class="fw-bold  fs-1xsm clr-3 font_Balsamiq mt-4 txt_shadow"> Cozy Capys is an impactful NFT
+                        project
                         featuring
                         10,000 adorable
                         capybara
