--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </div>
         <div class="container my_container pt-5  ">
             <div
-                class="row flex-column-reverse flex-lg-row  pt-md-5 mt-3 pb-5 mt100 d-flex align-items-center justify-content-between">
+                class="row flex-column-reverse flex-lg-row  pt-5 mt-5 pb-5 mt100 d-flex align-items-center justify-content-between">
                 <div class="col-12 col-lg-6 z-3">
                     <h2 class="fw-regular  fs-xl  clr-3 font_Cherry impact">Impact</h2>
                     <p class="fw-regular fs-1xsm clr-7  font_Balsamiq">Cozy Capys, an NFT project centered around
@@ -230,7 +230,7 @@
                         preservation.
                     </p>
                 </div>
-                <div class="col-12 col-lg-5 z-3 ">
+                <div class="col-12 col-lg-5 z-3 pt-4 ">
                     <img class="w-100 box " src="./assets/image/png/gif.gif" alt="#">
                 </div>
             </div>
@@ -506,14 +506,19 @@
             </div>
             <div class="mt-lg-5 pt-5">
                 <ul class="d-md-flex justify-content-center gap-5 text-center">
-                    <li><a href="" class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">Home</a></li>
-                    <li><a href="" class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">About</a>
+                    <li><a href="#home" class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">Home</a>
                     </li>
-                    <li><a href="" class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">Impact</a>
+                    <li><a href="#about"
+                            class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">About</a>
                     </li>
-                    <li><a href="" class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">Roadmap</a>
+                    <li><a href="#impact"
+                            class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">Impact</a>
                     </li>
-                    <li><a href="" class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">FAQ</a></li>
+                    <li><a href="#roadmap"
+                            class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">Roadmap</a>
+                    </li>
+                    <li><a href="#faq" class="fw-regular fs-1sm font_Balsamiq clr-10 line-4 position-relative">FAQ</a>
+                    </li>
                 </ul>
             </div>
             <div class="d-flex justify-content-center gap-4 mt-4 mb-5">
@@ -548,7 +553,6 @@
             <p class="fw-regular fs-2sm font_Balsamiq clr-11">Copyright ©2022 All rights reserved Plump Kittens</p>
         </div>
     </section>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
